--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,8 @@
         {{ message }}
     </div>
     {% endfor %}
-
     {% block page_content %}{% endblock %}
+    <p>Telefone: 83 98724-0009</p>
 </div>
 {% endblock %}
 
