--- a/templates/ajuste.html
+++ b/templates/ajuste.html
@@ -10,7 +10,7 @@
     <h1>Ajuste de estoque</h1>
 
     <a href="{{url_for('estoque', operacao='vender')}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Vender os produtos</a>
-    <a href="{{url_for('estoque', operacao='comprar')}}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Comprar estoque</a>
+    <a href="{{url_for('estoque', operacao='comprar')}}" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Comprar estoque</a>
 
 </div>
 {% endblock %}
