--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Flasky</a>
+            <a class="navbar-brand" href="/">Disk Bode</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Disk Bode</a></li>
+                <li><a href="/">Início</a></li>
             </ul>
         </div>
     </div>
@@ -39,6 +39,7 @@
     {% endfor %}
     {% block page_content %}{% endblock %}
     <p>Telefone: 83 98724-0009</p>
+    <p>Aceitamos todos os cartões.</p>
 </div>
 {% endblock %}
 
