--- a/templates/ajuste.html
+++ b/templates/ajuste.html
@@ -9,25 +9,11 @@
 
     <h1>Ajuste de estoque</h1>
 
-    <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col col-lg-2">
-
-        </div>
-        <div class="col-md-auto">
-        </div>
-        <div class="col col-lg-2">
-
-        </div>
-      </div>
-    </div>
-
-
     <div class="row">
       <div class="col-sm-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Vender os produtos</h5>
+            <h5 class="card-title">Vender os produtos do estoque</h5>
             <a href="{{url_for('estoque', operacao='vender')}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Vender</a>
           </div>
         </div>
@@ -35,7 +21,7 @@
       <div class="col-sm-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Comprar produtos</h5>
+            <h5 class="card-title">Comprar produtos para o estoque</h5>
             <a href="{{url_for('estoque', operacao='comprar')}}" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Comprar</a>
           </div>
         </div>
