--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
     </div>
     {% endfor %}
     {% block page_content %}{% endblock %}
-    <p>Telefone: 83 98724-0009</p>
+    <p>Telefone: (83) 98724-0009</p>
     <p>Aceitamos todos os cartões.</p>
 </div>
 {% endblock %}
